# orion-insights

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  config.py  deploy.command  deploy.sh  docker-compose.yml  investigation_report.md  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
.lovable/: plan.md
agents/: base_agent.py
agents/autoscaler/: agent.py
agents/clarification/: agent.py
agents/confidence_scorer/: agent.py
agents/contextual_retriever/: agent.py
agents/critical_analysis/: agent.py
agents/guardrail/: agent.py
agents/insight_generator/: agent.py
agents/integration/: agent.py
api/: main.py  session_store.py
auth/: dependencies.py  jwt_handler.py
core/: models.py  state.py
crews/: base_crew.py
deploy/: console.py  index.html
docs/: TECH_REPORT.html
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package.json  playwright.config.js  vite.config.js
guardrails_config/: config.yml
infrastructure/: confidence_scorer.py  determinism.py  llm_router.py  offline_llm.py
integrations/: confluence.py  github.py  jira.py
observability/: celery_app.py  tasks.py
orchestration/: graph.py
reports/: generator.py
scripts/: generate_all_phase_reports.py  integration_compose_test.sh  run_research.py  schema.sql  verify_determinism.py
specs/: data-model.md  determinism.md  orchestration.md  requirements.md  traceability.md
src/: routeTree.gen.ts  start.ts  styles.css
supabase/: config.toml
tests/: conftest.py
(+73 files in other folders)
