[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orion-researcher"
version = "2.0.0"
requires-python = ">=3.11"
description = "ORION — Multi-Agent AI Deep Researcher"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "I"]
